--- a/static/main.css
+++ b/static/main.css
@@ -69,7 +69,6 @@ nav a:hover {
 /* Main Content */
 .site-content {
   max-width: 50em;
-  margin: 20px auto;
   padding: 20px;
   background: white;
 }
@@ -82,92 +81,6 @@ nav a:hover {
   opacity: 0.6;
 }
 
-/* Recipe Header */
-.recipe-header {
-  max-width: 50em;
-  margin: 0 auto;
-  padding-bottom: 10px;
-  border-bottom: 2px solid #ddd;
-}
-
-/* Recipe title & buttons */
-.recipe-title-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 10px;
-}
-
-.recipe-description {
-  background-color: #f9f9f9;
-  padding: 15px;
-  border: 4px solid rgba(186, 186, 189, 0.313);
-  font-style: italic;
-  margin: 10px 0;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
-  white-space: normal;
-  max-width: 100%;
-}
-
-/* Recipe Buttons */
-.recipe-buttons {
-  display: flex;
-  gap: 10px;
-}
-
-.recipe-buttons a {
-  background: none;
-  border: none;
-  cursor: pointer;
-}
-
-/* Recipe Text */
-.recipe-description {
-  font-size: 1.1em;
-  margin: 10px 0;
-}
-
-.recipe-author {
-  font-size: 1em;
-  color: #555;
-}
-
-/* Recipe Layout */
-.recipe-container {
-  display: flex;
-  gap: 20px;
-  align-items: stretch; /* Ensures both columns have equal height */
-  justify-content: space-between;
-  max-width: 50em;
-  margin: auto;
-}
-
-.recipe-column {
-  flex: 1;
-  background: #f9f9f9;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between; /* Ensures both sections grow equally */
-  min-height: 100%;
-}
-
-.recipe-column h3 {
-  text-align: center;
-  margin-bottom: 15px;
-}
-
-/* Styling for the form title */
-.recipe-form-title {
-  text-align: center;
-  font-size: 2em;
-  font-weight: bold;
-  color: #333;
-  margin-bottom: 20px;
-}
 
 /* Styling for form groups (Title, Description, etc.) */
 .form-group {
